# EventWhisper

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
eventwhisper/evtxio/: evtxio.py
eventwhisper/mcp/: server.py
eventwhisper/utils/: config.py  normalize_lists.py  normalize_timestamp.py  normalize_value.py  normalize_wrapping_quotes.py
tests/: test_io_evtxio_filters.py  test_io_evtxio_list_files.py  test_mcp_server_min.py  test_utils_int_normalization.py  test_utils_list_normlization_atomic.py  test_utils_timestamp_normalization_atomic.py
